add table of astea
store all current astea in a table with id - filename mapping

--- a/app/src/main/res/layout/fragment_astulist_list.xml
+++ b/app/src/main/res/layout/fragment_astulist_list.xml
@@ -13,6 +13,6 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="descriptio.net.venture.AstuListFragment"
+        tools:context=".views.AstuListFragment"
         tools:listitem="@layout/fragment_astulist" />
 </FrameLayout>
