--- a/app/src/main/res/layout/fragment_add_astu.xml
+++ b/app/src/main/res/layout/fragment_add_astu.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="descriptio.net.venture.AddAstuFragment">
+    tools:context=".views.AddAstuFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -13,6 +13,7 @@
     <ListView
         android:id="@+id/file_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+    </ListView>
 
 </FrameLayout>
