--- a/app/src/main/res/layout/fragment_thauma_manager.xml
+++ b/app/src/main/res/layout/fragment_thauma_manager.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical"
         android:layout_weight="0.6"
         android:padding="20dp"
-        tools:context="descriptio.net.venture.ThaumaManager">
+        tools:context=".views.ThaumaManager">
 
         <TextView
             android:layout_width="match_parent"
