--- a/app/src/main/res/layout/fragment_astulist.xml
+++ b/app/src/main/res/layout/fragment_astulist.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="4dp">
 
     <android.support.v7.widget.CardView
