--- a/app/src/main/res/menu/activity_astu_list_drawer.xml
+++ b/app/src/main/res/menu/activity_astu_list_drawer.xml
@@ -8,8 +8,8 @@
             android:title="Gallery" />
         <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
             android:title="Slideshow" />
-        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
-            android:title="Tools" />
+        <item android:id="@+id/nav_delete" android:icon="@android:drawable/ic_menu_delete"
+            android:title="Delete" />
     </group>
 
     <item android:title="Communicate">
